--- a/index.html
+++ b/index.html
@@ -35,25 +35,8 @@
   </nav>
 
   <div class="container">
-    <h2>Наши услуги</h2>
-    <div class="services">
-      <div class="service">
-        <h3>Сантехника</h3>
-        <p>Установка и ремонт труб, кранов, сантехнических приборов и отопления.</p>
-      </div>
-      <div class="service">
-        <h3>Системный администратор</h3>
-        <p>Настройка сетей, серверов, удалённая поддержка и сопровождение IT-систем.</p>
-      </div>
-      <div class="service">
-        <h3>Клининг</h3>
-        <p>Уборка квартир, домов и офисных помещений любой сложности.</p>
-      </div>
-      <div class="service">
-        <h3>Ремонт ПК и телефонов</h3>
-        <p>Диагностика, восстановление данных, ремонт и замена деталей.</p>
-      </div>
-    </div>
+    <h2>Добро пожаловать в Компанию "Услуги Плюс"</h2>
+    <p>Мы предлагаем широкий спектр услуг для дома и бизнеса. Наши специалисты помогут вам с сантехникой, IT-поддержкой, уборкой, а также ремонтом компьютеров и телефонов. Мы гарантируем качество, скорость и профессионализм.</p>
   </div>
 
   <footer>
