--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <footer>
-    <p>Телефон: +7 123 456-78-90 | Email: info@uslugiplus.ru</p>
+    <p>Телефон: +7 979 000-95-88 | Email: olegnovoselcev52@gmail.com</p>
     <p>© 2025 Компания "Услуги Плюс". Все права защищены.</p>
   </footer>
 
